WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
277814
[UnifiedPDF] Two debug assertions on coordinate conversation fire unnecessarily for some locked documents
https://bugs.webkit.org/show_bug.cgi?id=277814
Summary
[UnifiedPDF] Two debug assertions on coordinate conversation fire unnecessari...
Abrar Rahman Protyasha
Reported
2024-08-08 11:14:47 PDT
Namely the `ASSERT(*pageIndex < m_documentLayout.pageCount());` in `UnifiedPDFPlugin::convert[Up/Down]`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-08 11:14:54 PDT
<
rdar://problem/133475258
>
Abrar Rahman Protyasha
Comment 2
2024-08-08 11:43:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31904
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug